test_regress/t/t_split_var_1_bad.out
%Warning-SPLITVAR: t/t_split_var_1_bad.v:4: Stray pragma of split_var is detected.
                                          : ... In instance t
  /*verilator split_var*/ 
  ^~~~~~~~~~~~~~~~~~~~~~~
                   ... Use "/* verilator lint_off SPLITVAR */" and lint_on around source to disable this message.
%Warning-SPLITVAR: t/t_split_var_1_bad.v:7: Pragma split_var is specified on 'should_show_warning0' which type is not supported yet. Only unpacked 1D array is supported by this version.
                                          : ... In instance t
logic should_show_warning0;                /*verilator split_var*/ 
                                           ^~~~~~~~~~~~~~~~~~~~~~~
%Warning-SPLITVAR: t/t_split_var_1_bad.v:8: Pragma split_var is specified on 'should_show_warning1' which type is not supported yet. Only unpacked 1D array is supported by this version.
                                          : ... In instance t
logic [1:0][7:0]should_show_warning1;      /*verilator split_var*/ 
                                           ^~~~~~~~~~~~~~~~~~~~~~~
%Warning-SPLITVAR: t/t_split_var_1_bad.v:9: Pragma split_var is specified on 'should_show_warning2' which type is not supported yet. Only unpacked 1D array is supported by this version.
                                          : ... In instance t
wire  [7:0]should_show_warning2[0:1][0:3]; /*verilator split_var*/ 
                                           ^~~~~~~~~~~~~~~~~~~~~~~
%Warning-SPLITVAR: t/t_split_var_1_bad.v:30: Variable 'cannot_split' will not be split because index cannot be determined statically.
                                           : ... In instance t.i_sub0
    rd_data = cannot_split[addr];
                           ^~~~
%Error: Exiting due to
